static/css/common.css
/* fonts */

@font-face {
    font-family: 'Latin ModMono';
    font-style: normal;
    font-weight: bold;
    src: url('../font/lmmono-bold.woff');
}

@font-face {
    font-family: 'Latin Modern Mono';
    font-style: italic;
    font-weight: bold;
    src: url('../font/lmmono-bolditalic.woff');
}

@font-face {
    font-family: 'Latin Modern Mono';
    font-style: italic;
    font-weight: normal;
    src: url('../font/lmmono-italic.woff');
}

@font-face {
    font-family: 'Latin Modern Mono';
    font-style: normal;
    font-weight: normal;
    src: url('../font/lmmono-normal.woff');
}

@font-face {
    font-family: 'Latin Modern Roman';
    font-style: normal;
    font-weight: bold;
    src: url('../font/lmroman-bold.woff');
}

@font-face {
    font-family: 'Latin Modern Roman';
    font-style: italic;
    font-weight: bold;
    src: url('../font/lmroman-bolditalic.woff');
}

@font-face {
    font-family: 'Latin Modern Roman';
    font-style: italic;
    font-weight: normal;
    src: url('../font/lmroman-italic.woff');
}

@font-face {
    font-family: 'Latin Modern Roman';
    font-style: normal;
    font-weight: normal;
    src: url('../font/lmroman-normal.woff');
}

/* global */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

a {
    color: inherit;
    text-decoration: none;
}

body {
    background-color: #FAFAFA;
    display: flex;
    flex-direction: column;
    font-family: 'Latin Modern Roman', 'Times New Roman', serif;
    height: 100vh;
}

.link {
    color: #AA0000;
    text-decoration: underline;
}

::-webkit-scrollbar {
    height: 8px;
    width: 8px;
}

::-webkit-scrollbar-thumb {
    background-color: #AAAAAA;
}

::-webkit-scrollbar-thumb:hover {
    background-color: #888888;
}

/* header */

#header {
    align-items: center;
    display: flex;
    flex-direction: column;
}

#header > h1 {
    font-size: 2.8rem;
    margin: 1.1rem 0;
    text-align: center;
}

#header > nav {
    max-width: 768px;
    display: inherit;
    flex-direction: row;
    justify-content: space-around;
    width: 100vw;
}

#header > nav > span > a {
    font-size: 1.2rem;
}

/* main */

#main {
    align-self: center;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: 2rem;
    width: 100vw;
}

#main > .paginator {
    align-items: flex-end;
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    justify-items: flex-end;
    justify-content: space-between;
}

/* footer */

#footer {
    align-items: center;
    display: flex;
    flex-direction: column;
    margin-bottom: .5rem;
}

#footer .footnote {
    text-align: center;
}

